--- a/.gitignore
+++ b/.gitignore
@@ -125,8 +125,8 @@ dist-ssr
 apps/private-game
 
 # Editor
-.vscode/*
-!.vscode/extensions.json
+.vscode/
+0!.vscode/extensions.json
 !.vscode/launch.json
 !.vscode/settings.json
 !.vscode/tasks.json
