--- a/packages/engine/package.json
+++ b/packages/engine/package.json
@@ -52,8 +52,12 @@
         "dev": "tsup --watch"
     },
     "devDependencies": {
+        "@types/opentype.js": "^1.3.9",
         "@webgpu/types": "^0.1.68",
         "tsup": "^8.0.0",
         "typescript": "^5.0.0"
+    },
+    "dependencies": {
+        "opentype.js": "^1.3.4"
     }
 }
